<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_friend_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@+id/add_friends_top_panel_container"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/add_friends_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="Friends"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:textSize="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:text="Find a friend by e-mail:"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/add_friend_email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/prompt_email"
                android:textColorHint="@color/colorAccent"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/add_friend_error_tv"
                android:layout_width="283dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:textColor="@color/colorPrimaryDark"
                android:textAlignment="center"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/add_friend_loading_pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:background="#EEEEEE"
                android:visibility="gone"/>

            <Button
                android:id="@+id/add_friend_search_btn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_gravity="center"
                android:enabled="true"
                android:text="Search"
                android:textStyle="bold"
                android:textColor="#EEEEEE"
                android:background="@drawable/btn_shape_selector_primary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp">

                <ImageView
                    android:id="@+id/add_friend_profile_iv"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="24dp"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/item_tour_bg_img"
                    android:scaleType="fitXY"
                    android:src="@drawable/default_image"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/add_friend_friendName_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_toRightOf="@+id/add_friend_profile_iv"
                    android:layout_alignParentBottom="true"
                    android:text="friendName"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="30dp"
                    android:textAlignment="gravity"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/add_friend_add_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/ic_baseline_add_24"
                    android:drawablePadding="10dip"
                    android:layout_gravity="left"
                    android:layout_alignParentRight="true"
                    android:visibility="gone"/>

            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".fragment.AddFriendFragment"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:text="My Friends:"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp">

                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/add_friend_my_friends_srl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/add_friend_my_friends_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginVertical="2dp"
                        android:background="#EEEEEE"
                        android:visibility="invisible"/>

                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

                <LinearLayout
                    android:id="@+id/add_friend_my_friends_loading_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/add_friend_my_friends_loading_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Loading Friends"
                        android:textColor="@color/colorAccent"
                        android:textSize="25dp"
                        android:layout_marginBottom="20dp" />

                    <ProgressBar
                        android:id="@+id/add_friend_my_friends_loading_pb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>